# monitoramento_indiretos

./: codigo_fonte.r
monitoramento_indiretos/: pyproject.toml
monitoramento_indiretos/monitoramento_indiretos/: app.py  main.py
monitoramento_indiretos/monitoramento_indiretos/api/: main.py
monitoramento_indiretos/monitoramento_indiretos/api/routes/: auth.py  login.py
monitoramento_indiretos/monitoramento_indiretos/core/: config.py  redis.py  security.py
monitoramento_indiretos/monitoramento_indiretos/services/: user_token.py  visipec.py
monitoramento_indiretos/tests/: conftest.py  test_login.py
